Actually fixed overflow-y problem.

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -8597,45 +8597,46 @@ section > .row {
 #meetsis .tweets, #meetsis .events {
   height: 250px;
   overflow-x: scroll;
-  overflow-y: none;
+  overflow-y: hidden;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
   padding: 20px;
   margin-top: 10px;
 }
 /* line 276, ../scss/app.scss */
 #meetsis .tweets li, #meetsis .events li {
+  overflow-y: hidden;
   padding-bottom: 15px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 }
-/* line 279, ../scss/app.scss */
+/* line 280, ../scss/app.scss */
 #meetsis .tweets li:last-child, #meetsis .events li:last-child {
   border-bottom: none;
   padding-bottom: 0;
   margin-bottom: 1rem;
 }
 
-/* line 291, ../scss/app.scss */
+/* line 292, ../scss/app.scss */
 #sustainability {
   background-image: url(../img/3-rooftop-tinted.jpg);
 }
 
-/* line 297, ../scss/app.scss */
+/* line 298, ../scss/app.scss */
 #studyabroad {
   padding-bottom: 0;
   margin-bottom: -7px;
 }
 
-/* line 302, ../scss/app.scss */
+/* line 303, ../scss/app.scss */
 .leaflet-bottom, .leaflet-right {
   display: none !important;
 }
 
-/* line 305, ../scss/app.scss */
+/* line 306, ../scss/app.scss */
 .leaflet-container .leaflet-control-attribution {
   display: none !important;
 }
 
-/* line 308, ../scss/app.scss */
+/* line 309, ../scss/app.scss */
 .mapbox:after {
   display: block;
   content: " ";
@@ -8646,12 +8647,12 @@ section > .row {
   right: 0;
 }
 
-/* line 320, ../scss/app.scss */
+/* line 321, ../scss/app.scss */
 #programsanddegrees {
   background-image: url(../img/5-topview-tinted.jpg);
 }
 
-/* line 328, ../scss/app.scss */
+/* line 329, ../scss/app.scss */
 #careersandinternships ul {
   -webkit-column-count: 3;
   /* Chrome, Safari, Opera */
@@ -8662,7 +8663,7 @@ section > .row {
   column-count: 3;
   column-gap: 0.75em;
 }
-/* line 336, ../scss/app.scss */
+/* line 337, ../scss/app.scss */
 #careersandinternships li {
   -webkit-column-break-inside: avoid;
   -moz-column-break-inside: avoid;
@@ -8676,29 +8677,29 @@ section > .row {
   column-fill: balance;
 }
 
-/* line 354, ../scss/app.scss */
+/* line 355, ../scss/app.scss */
 #alumni {
   background-image: url(../img/7-classroom-tinted.jpg);
   padding-bottom: 16rem;
 }
-/* line 358, ../scss/app.scss */
+/* line 359, ../scss/app.scss */
 #alumni .follow li {
   position: relative;
   top: -5px;
 }
-/* line 362, ../scss/app.scss */
+/* line 363, ../scss/app.scss */
 #alumni .follow .fa {
   font-size: 150%;
   width: 30px;
   float: left;
 }
-/* line 367, ../scss/app.scss */
+/* line 368, ../scss/app.scss */
 #alumni .follow div {
   display: inline-block;
   margin-top: 5px;
   width: 80%;
 }
-/* line 372, ../scss/app.scss */
+/* line 373, ../scss/app.scss */
 #alumni ul {
   margin-top: 25px;
 }
